init pour HNU6051

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,9 +1,9 @@
-auteur = "Emma Goldman"
-author = "Emma Goldman"
+auteur = "Mary Wollstonecraft Shelley"
+author = "Mary Wollstonecraft Shelley"
 bloctexte = "justify"
 copyright = "CC BY-NC-SA"
-couverture = "/uploads/tailpiece.jpg"
-description = "A contemporary text"
+couverture = "/uploads/illustration.jpg"
+description = "A horrific story"
 edition = "Fabrique"
 format = "portrait"
 indentation = "oui"
@@ -15,5 +15,5 @@ mention = "Fabrique"
 quatrieme = "oui"
 readingtime = "oui"
 search = false
-soustitre = ""
-titre = "Anarchism and Other Essays"
+soustitre = "Revised Edition, 1831"
+titre = "Frankenstein, or the Modern Prometheus"
