--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,55 +1,43 @@
-stages:
-  - pre-build
-  - build
-  - post-build
-  - site
+# Template from GitLab:
+# https://gitlab.com/pages/hugo/-/blob/main/.gitlab-ci.yml
+#
+# Before using this .gitlab-ci.yml:
+#
+# - This example uses the latest Docker image, but you might want to use the
+#   exact version to avoid any broken pipelines.
+#   All available Hugo versions are listed under https://gitlab.com/pages/hugo/container_registry.
+# - Read about the difference between hugo and hugo_extended
+#   https://gitlab.com/pages/hugo/-/blob/main/README.md#hugo-vs-hugo_extended.
+# - To change the theme, see
+#   https://gitlab.com/pages/hugo/-/blob/main/README.md#use-a-custom-theme.
+#
+image: registry.gitlab.com/pages/hugo/hugo_extended:0.92.2
 
-hugo2:
-  stage: pre-build
-  image: jojomi/hugo
+# Set this if you intend to use Git submodules
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+  HUGO_ENV: production
+
+default:
+  before_script:
+#    - apk add --update --no-cache git go
+    - apk add --update --no-cache git
+    - git submodule update --init --recursive
+#    - hugo mod init gitlab.com/pages/hugo
+#    - hugo mod get -u github.com/theNewDynamic/gohugo-theme-ananke
+
+test:
   script:
-  - hugo version
-  - hugo --cleanDestinationDir --environment epub --destination temp
-  artifacts:
-    paths:
-    - temp
-  only:
-  - master
-zip:
-  stage: build
-  image: tetraweb/php
-  script:
-  - apt-get update
-  - apt-cache gencaches
-  - apt-get install -y zip unzip
-  - cd temp
-  - rm -f ebook.epub
-  - zip -rX ebook.epub mimetype content META-INF uploads
-  artifacts:
-    paths:
-    - temp
-  only:
-  - master
-hugo1:
-  stage: post-build
-  image: jojomi/hugo
-  script:
-  - hugo version
-  - hugo --environment _default --destination temp2
-  artifacts:
-    paths:
-    - temp2
-  only:
-  - master
+    - hugo
+  rules:
+    - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+
 pages:
-  stage: site
-  image: alpine:latest
   script:
-  - mkdir -p public
-  - cp temp/ebook.epub public
-  - cp -r temp2/* public
+    - hugo
   artifacts:
     paths:
-    - public
-  only:
-    - master
+      - public
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+
