changement logo sur page web

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ format = "portrait"
 indentation = "oui"
 isbn = ""
 licence = "CC BY-NC-SA"
-logo = "images/logo.png"
+logo = "images/logo2.webp"
 marques = "crop"
 mention = "Fabrique"
 quatrieme = "oui"
