--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,14 +1,13 @@
 auteur = "Auteur"
-author = "Author"
 bloctexte = "justify"
-copyright = "Licence"
-couverture = "/uploads/couverture.jpg"
+copyright = "CC BY-NC-SA"
+couverture = "/uploads/couverture.png"
 description = "Description"
 edition = "Fabrique"
 format = "portrait"
 indentation = "oui"
 isbn = ""
-licence = "Licence"
+licence = "CC BY-NC-SA"
 logo = "images/logo.jpg"
 marques = "crop"
 mention = "Fabrique"
