--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,7 +8,7 @@ format = "portrait"
 indentation = "oui"
 isbn = ""
 licence = "CC BY-NC-SA"
-logo = "images/logo.jpg"
+logo = "images/Kartoffelpflanze.jpg"
 marques = "crop"
 mention = "Fabrique"
 quatrieme = "oui"
