--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,5 +14,5 @@ mention = "Fabrique"
 quatrieme = "oui"
 readingtime = "oui"
 search = false
-soustitre = "image"
+soustitre = "Sous-titre"
 titre = "La Kartoffel"
