--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 auteur = "Lili Ricke"
 bloctexte = "justify"
 copyright = "CC BY-NC-SA"
-couverture = "/uploads/couverture.png"
+couverture = "/images/Kartoffelpflanze.jpg"
 description = "Description"
 edition = "Fabrique"
 format = "portrait"
@@ -14,5 +14,5 @@ mention = "Fabrique"
 quatrieme = "oui"
 readingtime = "oui"
 search = false
-soustitre = "Sous-titre"
+soustitre = "ou la pomme de terre"
 titre = "La Kartoffel"
