--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,5 +14,5 @@ mention = "Fabrique"
 quatrieme = "oui"
 readingtime = "oui"
 search = false
-soustitre = "Image d'un plant de pomme de terre"
+soustitre = "ou la pomme de terre"
 titre = "La Kartoffel"
