--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,7 +10,7 @@ isbn = ""
 licence = "CC BY-NC-SA"
 logo = "images/Kartoffelpflanze.jpg"
 marques = "crop"
-mention = "Fabrique"
+mention = "Lili Ricke"
 quatrieme = "oui"
 readingtime = "oui"
 search = false
