--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@ bloctexte = "justify"
 copyright = "CC BY-NC-SA"
 couverture = "/images/Kartoffelpflanze.jpg"
 description = "Description"
-edition = "Fabrique"
+edition = "Lili Ricke - 20.04.2023 - CC BY-NC-SA"
 format = "portrait"
 indentation = "oui"
 isbn = ""
