--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,7 +2,7 @@ auteur = "Lili Ricke"
 bloctexte = "justify"
 copyright = "CC BY-NC-SA"
 couverture = "/images/Kartoffelpflanze.jpg"
-description = "Description"
+description = "Cette page informe sur l'histoire, la diversité et les recettes de la pomme de terre"
 edition = "Lili Ricke | 2023 | CC BY-NC-SA"
 format = "portrait"
 indentation = "oui"
@@ -12,7 +12,7 @@ logo = "images/Kartoffelpflanze.jpg"
 marques = "crop"
 mention = "Lili Ricke"
 quatrieme = "oui"
-readingtime = "oui"
+readingtime = "10 minutes"
 search = false
 soustitre = "ou la pomme de terre"
 titre = "La Kartoffel"
