--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -57,3 +57,9 @@ link = "plugins/search/search.js"
 [params.cookies]
 enable = false
 expire_days = 2
+
+[[menu.nav]]
+                            name = "Crédits"
+                            url = "/credits/"
+                            weight = 4
+                            
