--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 auteur = "Lili Ricke"
-date = "2023"
+introduction = "Ma page web sur l'histoire, la diversité et les recettes de la pomme de terre"
 bloctexte = "justify"
 copyright = "CC BY-NC-SA"
 couverture = "/images/Kartoffelpflanze.jpg"
